# Data-Viz-Dashboard

./: .gitignore  README.md  Spacefile  app.py  data_retr.py  main.py  org.py  pyproject.toml  requirements.txt  styles.css
assets/: styles.css
src/: dash_test.py
src/components/: epa_chart.py  epa_figure.py  ids.py  layout.py  sacks_chart.py  season_dropdown.py  targets_slider.py  yac_chart.py
src/data/: loader.py
